change media queries based on background

--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
 
 body {
   background: var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
 
 body * {
@@ -151,4 +152,14 @@ footer {
   font-weight: 500;
   font-size: 14px;
   text-decoration: none;
+}
+
+/* Media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
